fix (puconvocation-com): Fix an issue in which the scrollbars were overlapping with the seat map.

--- a/frontend/websites/puconvocation-com/src/app/[locale]/globals.css
+++ b/frontend/websites/puconvocation-com/src/app/[locale]/globals.css
@@ -15,6 +15,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+    scrollbar-gutter: stable;
+}
+
 @layer base {
 
     :root {
